Very minor fix: --no-bp now works with all other options, previously it required --indi or --rf.   --This line, and those below, will be ignored--
M    miniapps/esl-ssdraw.man
M    miniapps/esl-ssdraw.c


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@616 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-ssdraw.man
+++ b/miniapps/esl-ssdraw.man
@@ -659,11 +659,7 @@ sequence, even if the alignment has PP annotation.
 
 .TP
 .B --no-bp
-When used in combination with 
-.B --indi
-or
-.B --rf,
-do not color basepaired nucleotides based on their basepair type.
+Do not color basepaired nucleotides based on their basepair type.
 
 .TP
 .B --no-ol
