esl-alimanip: added --xambig <n>, to remove sequences with more than 	      <n> ambiguous residues from an alignment. esl-alistat:  added --cinfo <f> and --bpinfo <f> to print per-column 	      residue counts and per-paired-column basepair counts to 	      output files. Also added --noambig to use in combination 	      with --cinfo, ambiguous residues are not counted.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@623 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alimanip.man
+++ b/miniapps/esl-alimanip.man
@@ -103,6 +103,12 @@ non-gap #=GC RF columns or the last
 non-gap #=GC RF columns.
 
 .TP 
+.BI --xambig " <n>"
+Remove any sequences that has more than
+.I <n>
+ambiguous (degenerate) residues.
+
+.TP 
 .BI --seq-r " <f>"
 Remove any sequences with names listed in file 
 .I <f>.
