1. esl_msa.c:esl_msa_ReadInfoPfam() - changed type of 'pp_ct' input    argument from int ** to double **, so it could potentially handle    weighted (and therefore fractional) counts instead of just integer    counts.
2. esl-alimask.c and esl-ssdraw.c: modified variables and calls to be
   consistent with esl_msa change from 1.

3. esl-alistat.c: added --weight option, which modifies the behavior
   of the --*info <f> options. With --weight, <f> will include
   weighted counts instead of raw counts, with weights derived from
   #=GS WT annotation in the msafile.

4. esl-alistat.itest.pl, esl-alistat.man: updated to include --weight
   option. 


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@625 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alistat.man
+++ b/miniapps/esl-alistat.man
@@ -209,6 +209,23 @@ canonical residues will be counted. That is, any basepair that is a gap
 or an ambiguous (degenerate) residue at either position of the pair is
 ignored and not counted.
 
+
+.TP 
+.B --weight
+With 
+.B --icinfo, --rinfo, --pcinfo, --iinfo, --cinfo 
+and
+.B --bpinfo,
+weight counts based on #=GS WT annotation in the input 
+.B msafile.
+A residue or basepair from a sequence with a weight of 
+.I x
+will be considered 
+.I x
+counts. 
+By default, raw, unweighted counts are reported; corresponding to each
+sequence having an equal weight of 1.
+
 .SH AUTHOR
 
 Easel and its documentation are @EASEL_COPYRIGHT@.
