esl-alimanip: added --minpp <x> option, which replaces all residues 	      with a posterior probability value (#=GR PP) less than 	      <x> with gaps. The PP values for these residues are 	      changed to gaps as well.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@626 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alimanip.man
+++ b/miniapps/esl-alimanip.man
@@ -210,6 +210,16 @@ reference (GC RF) annotation. Only works in combination with
 .B --trim.
 
 .TP 
+.BI --minpp " <x>"
+Replace all residues in the alignments for which the posterior
+probability annotation (#=GR PP) is less than 
+.I <x>
+with gaps. The PP annotation for these residues is also converted to
+gaps. 
+.I <x>
+must be greater than 0.0 and less than or equal to 0.95.
+
+.TP 
 .BI --tree " <f>"
 Reorder sequences by tree order. 
 Perform single linkage clustering on the sequences in the alignment
