Spelling typo fixes, systematically in source/documentation: Swissprot -> Swiss-Prot, Uniprot -> UniProt, Genbank -> GenBank
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@647 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -387,7 +387,7 @@ activate these more powerful optional abilities by providing the
 appropriate modules; or you can just leave the optional modules out
 and use the core functionality.  For example, if you use only the
 \eslmod{sqio} module, you get the ability to read unaligned sequence
-files like FASTA or Genbank; but if you augment \eslmod{sqio} with the
+files like FASTA or GenBank; but if you augment \eslmod{sqio} with the
 \eslmod{msa} multiple alignment module, you gain the ability to read
 individual sequences from multiple alignment files sequentially. At
 compile-time, you declare (by means of \ccode{\#define} flags in
