--- a/esl_alphabet.tex
+++ b/esl_alphabet.tex
@@ -398,7 +398,7 @@ represent them both internally and in any sequence output. For
 example, no application should read an input selenocysteine residue
 (\ccode{U}) and output it as a cysteine (\ccode{C}) -- this changes
 the original sequence and causes data corruption.\footnote{However, at
-least one the main public protein databases (Uniprot) has already
+least one the main public protein databases (UniProt) has already
 chosen to replace all selenocysteines with \ccode{C} and all
 pyrrolysines with \ccode{K}, for fear of breaking legacy sequence
 analysis software.  So, this data corruption is already a fact of
