--- a/esl_sq.tex
+++ b/esl_sq.tex
@@ -207,7 +207,7 @@ would be a Good Idea to adhere to them:
   accessions only make sense if you know what database they're for, so
   when sequences might be from different databases, you'll sometimes
   see accessions prefixed with a code indicating the source database,
-  as in something like \ccode{Uniprot:P09012}. Again, \Easel\ itself
+  as in something like \ccode{UniProt:P09012}. Again, \Easel\ itself
   isn't enforcing the format of this string, so your application is
   free to create its own accession/version/database format as needed.
 
