--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -125,8 +125,8 @@ codes) are:
 \ccode{eslSQFILE\_DDBJ}     & DDBJ flat text DNA database format \\
 \ccode{eslSQFILE\_EMBL}     & EMBL flat text DNA database format \\
 \ccode{eslSQFILE\_FASTA}    & FASTA format \\
-\ccode{eslSQFILE\_GENBANK}  & Genbank flat text DNA database format \\
-\ccode{eslSQFILE\_UNIPROT}  & Uniprot flat text protein database format \\
+\ccode{eslSQFILE\_GENBANK}  & GenBank flat text DNA database format \\
+\ccode{eslSQFILE\_UNIPROT}  & UniProt flat text protein database format \\
 \ccode{eslSQFILE\_NCBI}     & NCBI BLAST database format version 4  \\
 \end{tabular}
 
