--- a/esl_ssi.tex
+++ b/esl_ssi.tex
@@ -19,7 +19,7 @@ can use SSI to rapidly position individual processes at different
 record ranges in a flatfile database.
 
 A single SSI file can index a sequence database that consists of more
-than one individual sequence file. For example, the Genbank database
+than one individual sequence file. For example, the GenBank database
 is distributed as a large number of flatfiles; one SSI file can index
 them all.
 
