--- a/miniapps/esl-sfetch.man
+++ b/miniapps/esl-sfetch.man
@@ -127,7 +127,7 @@ option.
 
 .pp
 The sequence file may be in any of several different common unaligned
-sequence formats including FASTA, Genbank, EMBL, Uniprot, or DDBJ. It
+sequence formats including FASTA, GenBank, EMBL, UniProt, or DDBJ. It
 may also be an alignment file, in Stockholm format for example. By
 default the file format is autodetected. The 
 .I --informat <s> 
@@ -279,7 +279,7 @@ Specify that the sequence file is in format
 .I <s>,
 where 
 .I <s> 
-may be FASTA, Genbank, EMBL, Uniprot, DDBJ, or Stockholm.  This string
+may be FASTA, GenBank, EMBL, UniProt, DDBJ, or Stockholm.  This string
 is case-insensitive ("genbank" or "GenBank" both work, for example).
 
 .TP
